# esp_idf_5.1_demos

17_MQTT_TCP_ONENET/main/: main.c  p_i2c_sht20.c  p_i2c_sht20.h  p_mqtt.c
esp32_cjson/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32_cjson/fatfs_storage/: CMakeLists.txt  data.json  main.c  spifat.h
esp32_cjson/main/: datafile.h  main.c  sd_spi_fat.c  spifat.c  spifat.h
esp32_fs_fatfs/: ota_fs_4M.csv  sdkconfig
esp32_fs_fatfs/fatfs_storage/: 234.c  sd_spi_fat.c  spifat.c
esp32_fs_fatfs/main/: CMakeLists.txt  main.c  sd_spi_fat.c  sd_spi_fat.h
esp32_fs_spiffs/: ota_fs_4M.csv  sdkconfig
esp32_fs_spiffs/main/: CMakeLists.txt  main.c  spiffs.c
esp32_fs_spiffs/spiffs_storage/: CMakeLists.txt  main.c  spiffs.h
esp32_gpio_int/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32_gpio_int/main/: CMakeLists.txt  common.h  gpio.h  gpio_int.c  gpio_int.h  main.c
esp32_i2c_sht20/: CMakeLists.txt
esp32_i2c_sht20/main/: CMakeLists.txt  common.h  i2c.c  i2c.h  main.c  sht20.c  sht20.h
esp32_ledc/main/: CMakeLists.txt  datafile.h  ledc.c  ledc.h  main.c
esp32_lvgl_st7789v2/: sdkconfig  sdkconfig.old
esp32_lvgl_st7789v2/main/: gpio_button.c  led_brightness.c  main.c  st7789.c
esp32_now/: sdkconfig
esp32_oneshot_adc/main/: CMakeLists.txt  adc.h  datafile.h  main.c
esp32_remote_car/: sdkconfig  sdkconfig.old
esp32_tim_gpttim/: CMakeLists.txt
esp32_uart/: CMakeLists.txt  sdkconfig.old
esp32_wifi_ap/: CMakeLists.txt
esp32_wifi_http_server/: CMakeLists.txt  sdkconfig
esp32_wifi_tcp_client/: CMakeLists.txt
esp32_wifi_tcp_server/: CMakeLists.txt
(+67 files in other folders)
